# text-to-SQL-analysis

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yaml  platform-multi-agent.yaml  platform-supermarket.yaml  platform.yaml  pyproject.toml
agents/base-agent/: pyproject.toml
agents/base-runner/: Dockerfile  pyproject.toml
agents/base-runner/src/base_runner/: __main__.py  runner.py
agents/chat-gateway/: Dockerfile  pyproject.toml
agents/chat-gateway/base-agent/src/base_agent/: app.py
agents/chat-gateway/src/chat_gateway/: app.py  auth.py  clients.py  oauth.py  orchestrator.py
agents/conversational-router/: Dockerfile  pyproject.toml
agents/conversational-router/base-agent/: Dockerfile
agents/conversational-router/base-agent/src/base_agent/tools/: __init__.py  example_tool.py
agents/conversational-router/src/conversational_router/: app.py  service.py
agents/conversational-router/src/conversational_router/skills/router/: SKILL.md  TOOLS.md
agents/data-analyst/: Dockerfile  pyproject.toml
agents/data-analyst/src/data_analyst/: app.py  service.py
agents/data-analyst/src/data_analyst/skills/analyst/: SKILL.md  TOOLS.md
agents/risk-reviewer/: Dockerfile  pyproject.toml
agents/risk-reviewer/src/risk_reviewer/: app.py  service.py
agents/risk-reviewer/src/risk_reviewer/skills/risk_reviewer/: SKILL.md  TOOLS.md
agents/sql-planner/: Dockerfile  pyproject.toml
agents/sql-planner/base-agent/src/base_agent/: service.py
agents/sql-planner/src/sql_planner/: app.py  service.py
agents/sql-planner/src/sql_planner/skills/sql_planner/: SKILL.md  TOOLS.md
libs/agent-core/: README.md  pyproject.toml
libs/agent-core/src/agent_core/: __init__.py
libs/agent-core/src/agent_core/capabilities/: __init__.py
libs/agent-core/src/agent_core/capabilities/context/: __init__.py  base.py  default_builder.py
libs/agent-core/src/agent_core/capabilities/memory/: __init__.py  base.py  factory.py  mongodb_ltm.py  redis_ltm.py  redis_stm.py  sqlite_ltm.py  strands_stm.py
libs/agent-core/src/agent_core/capabilities/models/: __init__.py  base.py  openai_compatible.py
libs/agent-core/src/agent_core/capabilities/output_parsers/: __init__.py  base.py  json_parser.py
libs/agent-core/src/agent_core/capabilities/prompts/: __init__.py  base.py  file_repository.py
libs/agent-core/src/agent_core/capabilities/retrieval/: __init__.py  base.py  chroma_retriever.py  factory.py  in_memory_vector.py  openai_embeddings.py
libs/agent-core/src/agent_core/capabilities/tool_registry/: __init__.py  base.py  simple.py
libs/agent-core/src/agent_core/capabilities/tools/: __init__.py  base.py
libs/agent-core/src/agent_core/core/: __init__.py
libs/agent-core/src/agent_core/core/agent/: __init__.py  base.py  strands_agent.py
libs/agent-core/src/agent_core/core/evaluation/: __init__.py  base.py  heuristic.py
libs/agent-core/src/agent_core/core/persona/: __init__.py  base.py
libs/agent-core/src/agent_core/core/reasoning/: __init__.py  base.py  chain_of_thought.py  factory.py  loop.py  passthrough.py  plan_execute.py  react.py
libs/agent-core/src/agent_core/core/termination/: __init__.py  base.py
libs/agent-core/src/agent_core/infra/: __init__.py
libs/agent-core/src/agent_core/infra/backends/: config.py  resolve.py
libs/agent-core/src/agent_core/infra/budget/: __init__.py  base.py
libs/agent-core/src/agent_core/infra/caching/: __init__.py  base.py  factory.py  redis_cache.py
libs/agent-core/src/agent_core/infra/di/: __init__.py  base.py
libs/agent-core/src/agent_core/infra/errors/: __init__.py  base.py
libs/agent-core/src/agent_core/infra/guardrails/: __init__.py  base.py
libs/agent-core/src/agent_core/infra/hooks/: __init__.py  base.py
libs/agent-core/src/agent_core/infra/observability/: __init__.py  base.py
libs/agent-core/src/agent_core/io/: __init__.py  schemas.py
libs/agent-core/src/agent_core/multiagent/: __init__.py
libs/agent-core/src/agent_core/multiagent/communication/: __init__.py  base.py  factory.py  redis_transport.py
libs/agent-core/src/agent_core/multiagent/event_bus/: __init__.py  base.py  redis_bus.py
libs/agent-core/src/agent_core/multiagent/human_in_loop/: __init__.py  base.py
libs/agent-core/src/agent_core/multiagent/orchestration/: __init__.py  base.py
libs/agent-core/src/agent_core/multiagent/registry/: __init__.py  base.py
libs/agent-core/src/agent_core/multiagent/runtime/: __init__.py  base.py  thread_pool.py
libs/agent-core/src/agent_core/skills/: __init__.py  bundle.py
libs/agent-core/src/agent_core/state/: __init__.py
libs/agent-core/src/agent_core/state/schema/: base.py  (+1 more)
libs/agent-core/src/agent_core/tasks/: __init__.py
libs/commons/: README.md  pyproject.toml
libs/commons/src/commons/: __init__.py  errors.py  logging.py  settings.py  types.py
libs/mcp-core/: README.md  pyproject.toml
libs/mcp-core/src/mcp_core/: __init__.py
libs/mcp-core/src/mcp_core/client/: __init__.py
libs/mcp-core/src/mcp_core/server/: __init__.py
libs/platform-core/: README.md  pyproject.toml
libs/platform-core/src/platform_core/: __init__.py  cli.py
libs/platform-core/src/platform_core/config/: __init__.py  loader.py  schema.py
libs/platform-core/src/platform_core/infra/: backends.py
libs/platform-core/src/platform_core/orchestration/: __init__.py  graph_orchestrator.py
libs/platform-core/src/platform_core/registry/: __init__.py  agent_registry.py  mcp_registry.py
libs/platform-core/src/platform_core/router/: __init__.py  a2a_client.py  message_router.py
libs/platform-core/src/platform_core/runtime/: __init__.py  platform.py
libs/platform-core/src/platform_core/service/: __init__.py  base.py  http.py
mcp-servers/python-sandbox/: pyproject.toml
mcp-servers/python-sandbox/src/python_sandbox/: app.py  providers.py  tools_impl.py
mcp-servers/sql-gateway/: Dockerfile  pyproject.toml
mcp-servers/sql-gateway/base-mcp-server/: pyproject.toml
mcp-servers/sql-gateway/base-mcp-server/src/base_mcp_server/: app.py
mcp-servers/sql-gateway/src/sql_gateway/: app.py  providers.py  tools_impl.py
(+180 files in other folders)
