[project]
name = "multi-agent-monorepo"
version = "0.1.0"
description = "Base monorepo template for generic multi-agent projects (uv workspace)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "platform-core",
    "base-runner",
]

[tool.uv.workspace]
members = ["libs/*", "packages/*", "agents/*", "mcp-servers/*"]

[tool.uv.sources]
commons = { workspace = true }
agent-core = { workspace = true }
mcp-core = { workspace = true }
platform-core = { workspace = true }
project-core = { workspace = true }
project-test = { workspace = true }
base-agent = { workspace = true }
base-runner = { workspace = true }
base-mcp-server = { workspace = true }
sql-gateway = { workspace = true }
python-sandbox = { workspace = true }
conversational-router = { workspace = true }
sql-planner = { workspace = true }
risk-reviewer = { workspace = true }
data-analyst = { workspace = true }
chat-gateway = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.10",
    "project-test",
    "chat-gateway",
    "sql-gateway",
    "conversational-router",
    "sql-planner",
    "risk-reviewer",
    "data-analyst",
]
# Docker base image tiers — see docs/DOCKER_BUILD.md
# TODO: add domain packages to docker-project when the project needs heavier shared deps
docker-project = ["project-core"]
# TODO: add mcp-core transitive deps if MCP servers need extra libraries
docker-mcp = ["project-core", "mcp-core"]
# TODO: extend with openai/strands/... per agent project
docker-agent = [
    "project-core",
    "platform-core",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "openai>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests", "packages/project-test"]
pythonpath = ["."]
addopts = "-q"
