[project]
name = "base-agent"
version = "0.1.0"
description = "Template HTTP agent image — implement decide() for your domain"
requires-python = ">=3.11"
dependencies = [
    "platform-core",
    "project-core",
    "fastapi",
    "uvicorn[standard]",
    "openai>=1.0",
]

[project.scripts]
base-agent = "base_agent.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/base_agent"]

[tool.hatch.metadata]
allow-direct-references = true
