[project]
name = "chat-gateway"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "platform-core",
    "project-core",
    "fastapi",
    "uvicorn[standard]",
    "httpx>=0.27",
    "pyjwt>=2.8",
    "sql-gateway",
    "slowapi>=0.1.9",
]

[project.scripts]
chat-gateway = "chat_gateway.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chat_gateway"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
sql-gateway = { workspace = true }
