[project]
name = "mcp-core"
version = "0.1.0"
description = "Shared abstract building blocks for MCP servers and clients (items 37-50)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "commons",
    "agent-core",
    "mcp>=1.2.0",
    "pydantic>=2",
]

[project.optional-dependencies]
auth = ["pyjwt>=2", "cryptography>=42"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_core"]

[tool.hatch.metadata]
allow-direct-references = true
