[project]
name = "platform-core"
version = "0.1.0"
description = "Config-driven control plane: agent/MCP registries, A2A router, graph orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "commons",
    "agent-core",
    "mcp-core",
    "pydantic>=2",
    "pyyaml>=6",
    "httpx>=0.27",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.115", "uvicorn>=0.30"]

[project.scripts]
agent-platform = "platform_core.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/platform_core"]

[tool.hatch.metadata]
allow-direct-references = true
