[project]
name = "python-sandbox"
version = "0.1.0"
description = "Python sandbox MCP for pandas/plot/excel analysis"
requires-python = ">=3.11"
dependencies = [
    "mcp-core",
    "project-core",
    "pandas",
    "matplotlib",
    "openpyxl",
]

[project.scripts]
python-sandbox = "python_sandbox.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_sandbox"]

[tool.hatch.metadata]
allow-direct-references = true
