[project]
name = "base-mcp-server"
version = "0.1.0"
description = "Template MCP server image — add tools in tools_impl.py"
requires-python = ">=3.11"
dependencies = [
    "mcp-core",
    "project-core",
]

[project.scripts]
base-mcp-server = "base_mcp_server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/base_mcp_server"]

[tool.hatch.metadata]
allow-direct-references = true
